# claude-lens

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVSETUP.md  README.md  SECURITY.md  SETUP.md  index.html  package-lock.json  package.json  setup.sh  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
design/: claude-lens-v1-design.html
scripts/: build-sidecar.sh  build_sidecar.sh
sidecar/: activity_monitor.py  db.py  keychain.py  main.py  parser.py  poller.py  pricing.py  requirements.txt  sidecar.spec  suggestion_engine.py  suggestions_loader.py  suggestions_schema.py  trigger_evaluator.py  validate_suggestions.py
sidecar/data/: custom_suggestions_template.yaml  suggestions.yaml
sidecar/tests/: conftest.py  test_activity_monitor.py  test_config.py  test_db.py  test_db_stats.py  test_endpoints.py  test_keychain.py  test_onboarding.py  test_parser.py  test_poller.py  test_pricing.py  test_suggestions.py  test_validate_suggestions.py
src/: App.onboarding.test.tsx  App.tsx  styles.css
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Onboarding.test.tsx  Onboarding.tsx  PlanBar.tsx  SessionList.tsx  SleepIndicator.tsx  StaleIndicator.tsx  StatsCards.tsx  SuggestionBadge.tsx  SuggestionCard.test.tsx  SuggestionCard.tsx  SuggestionTray.test.tsx  SuggestionTray.tsx  UsageChart.test.tsx  (+3 more)
tools/: check_icon.py  fix_icon.py
(+5 files in other folders)
