[package]
name = "claude-lens"
version = "0.1.0"
description = "Claude Pro usage maximizer widget for macOS"
authors = ["Martha"]
edition = "2021"

[lib]
name = "claude_lens_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "claude-lens"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
